force-app/main/default/objects/RealEstateChangeHistory__c/RealEstateChangeHistory__c.object-meta.xml
<CustomObject>
    <label>物件変更履歴</label>
    <nameField>
        <displayFormat>RC-{000000000}</displayFormat>
        <label>物件変更履歴名</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>Private</sharingModel>
</CustomObject>