force-app/main/default/objects/RealEstateChangeHistory__c/fields/del_IsTargetRealEstate__c.field-meta.xml
<CustomField>
    <fullName>del_IsTargetRealEstate__c</fullName>
    <formula>IsTarget__c = True</formula>
    <label>（不要）更新対象（物件用）</label>
    <type>Checkbox</type>
</CustomField>