force-app/main/default/objects/RealEstateChangeHistory__c/fields/delNewResidentLookup__c.field-meta.xml
<CustomField>
    <fullName>delNewResidentLookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>（不要）変更後_参照関係（入居者）</label>
    <referenceTo>Resident__c</referenceTo>
    <relationshipLabel>物件変更履歴 (入居者)</relationshipLabel>
    <relationshipName>delRCHResidentRelation102</relationshipName>
    <type>Lookup</type>
</CustomField>