force-app/main/default/objects/RealEstateChangeHistory__c/fields/delPreviousResidentLookup__c.field-meta.xml
<CustomField>
    <fullName>delPreviousResidentLookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>（不要）変更前_参照関係（入居者）</label>
    <referenceTo>Resident__c</referenceTo>
    <relationshipLabel>物件変更履歴</relationshipLabel>
    <relationshipName>delRCHResidentRelation101</relationshipName>
    <type>Lookup</type>
</CustomField>