force-app/main/default/objects/RealEstateChangeHistory__c/fields/IsTarget__c.field-meta.xml
<CustomField>
    <fullName>IsTarget__c</fullName>
    <formula>AND(
 UpdateDate__c  &lt;=  TODAY(),
 IsChanged__c = FALSE,
 IsAutoUpdate__c = TRUE
)</formula>
    <label>更新対象</label>
    <type>Checkbox</type>
</CustomField>