force-app/main/default/objects/RealEstateChangeHistory__c/fields/NewAccountLookup__c.field-meta.xml
<CustomField>
    <fullName>NewAccountLookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>変更後_参照関係（取引先）</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>物件変更履歴 (変更後_参照関係（取引先）)</relationshipLabel>
    <relationshipName>NewAccountLookupAccount</relationshipName>
    <type>Lookup</type>
</CustomField>