force-app/main/default/objects/RealEstateChangeHistory__c/fields/NewCurrency__c.field-meta.xml
<CustomField>
    <fullName>NewCurrency__c</fullName>
    <label>変更後_通貨</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>