force-app/main/default/objects/RealEstateChangeHistory__c/fields/NewDate__c.field-meta.xml
<CustomField>
    <fullName>NewDate__c</fullName>
    <label>変更後_日付</label>
    <type>Date</type>
</CustomField>