force-app/main/default/objects/RealEstateChangeHistory__c/fields/NewNumber__c.field-meta.xml
<CustomField>
    <fullName>NewNumber__c</fullName>
    <label>変更後_数値</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>