force-app/main/default/objects/RealEstateChangeHistory__c/fields/NewResident__c.field-meta.xml
<CustomField>
    <fullName>NewResident__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>変更後_参照関係（入居者）</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>物件変更履歴 (変更後_参照関係（入居者）)</relationshipLabel>
    <relationshipName>RCHContactRelation102</relationshipName>
    <type>Lookup</type>
</CustomField>