force-app/main/default/objects/RealEstateChangeHistory__c/fields/NewText__c.field-meta.xml
<CustomField>
    <fullName>NewText__c</fullName>
    <label>変更後_テキスト</label>
    <length>255</length>
    <type>Text</type>
</CustomField>