force-app/main/default/objects/RealEstateChangeHistory__c/fields/NewValue__c.field-meta.xml
<CustomField>
    <fullName>NewValue__c</fullName>
    <label>変更後</label>
    <length>255</length>
    <type>Text</type>
</CustomField>