force-app/main/default/objects/RealEstateChangeHistory__c/fields/PreviousDate__c.field-meta.xml
<CustomField>
    <fullName>PreviousDate__c</fullName>
    <label>変更前_日付</label>
    <type>Date</type>
</CustomField>