force-app/main/default/objects/RealEstateChangeHistory__c/fields/PreviousResident__c.field-meta.xml
<CustomField>
    <fullName>PreviousResident__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>変更前_参照関係（入居者）</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>物件変更履歴</relationshipLabel>
    <relationshipName>RCHContactRelation101</relationshipName>
    <type>Lookup</type>
</CustomField>