force-app/main/default/objects/RealEstateChangeHistory__c/fields/PreviousState__c.field-meta.xml
<CustomField>
    <fullName>PreviousState__c</fullName>
    <label>変更前_都道府県</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>State</valueSetName>
    </valueSet>
</CustomField>