force-app/main/default/objects/RealEstateChangeHistory__c/fields/PreviousText__c.field-meta.xml
<CustomField>
    <fullName>PreviousText__c</fullName>
    <label>変更前_テキスト</label>
    <length>255</length>
    <type>Text</type>
</CustomField>