force-app/main/default/objects/RealEstateChangeHistory__c/fields/PreviousValue__c.field-meta.xml
<CustomField>
    <fullName>PreviousValue__c</fullName>
    <label>変更前</label>
    <length>255</length>
    <type>Text</type>
</CustomField>