force-app/main/default/objects/RealEstateChangeHistory__c/fields/RealEstate__c.field-meta.xml
<CustomField>
    <fullName>RealEstate__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>物件</label>
    <referenceTo>RealEstate__c</referenceTo>
    <relationshipLabel>物件変更履歴</relationshipLabel>
    <relationshipName>RealEstate_RealEstateChangeHistory</relationshipName>
    <type>Lookup</type>
</CustomField>