force-app/main/default/objects/RealEstateChangeHistory__c/fields/UpdateDate__c.field-meta.xml
<CustomField>
    <fullName>UpdateDate__c</fullName>
    <label>変更日</label>
    <type>Date</type>
</CustomField>