force-app/main/default/objects/RealEstateChangeHistory__c/fields/UpdateFields__c.field-meta.xml
<CustomField>
    <fullName>UpdateFields__c</fullName>
    <label>変更項目</label>
    <length>255</length>
    <type>Text</type>
</CustomField>